// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CaseNoteListItem /> should match the default snapshot 1`] = `
<div
  className="sc-EHOje iAVrZB"
  data-qa="case-note"
>
  <div
    className="sc-bZQynM iLmuGP"
  >
    <span>
      Tuesday
    </span>
    <span>
      01/01/2019
    </span>
    <span>
      7:00 PM
    </span>
    User, Test
  </div>
  <div
    className="sc-gzVnrw kAvXkR"
  >
    <h2
      className="sc-bwzfXH byYzXZ"
    >
      Achievements
       | 
      Gym
    </h2>
    <div
      className="sc-htoDjs cWPcJf"
    >
      Creation date:
       
      <span>
        <span>
          Tuesday
        </span>
         - 
        <span>
          01/01/2019
        </span>
         -
         
        <span>
          9:00 PM
        </span>
      </span>
    </div>
    <pre
      className="sc-dnqmqq gMkpRg"
    >
      Offender enjoys attending the gym.
    </pre>
  </div>
</div>
`;

exports[`<CaseNoteListItem /> should render with amendments snapshot 1`] = `
<div
  className="sc-EHOje iAVrZB"
  data-qa="case-note"
>
  <div
    className="sc-bZQynM iLmuGP"
  >
    <span>
      Tuesday
    </span>
    <span>
      01/01/2019
    </span>
    <span>
      7:00 PM
    </span>
    User, Test
  </div>
  <div
    className="sc-gzVnrw kAvXkR"
  >
    <h2
      className="sc-bwzfXH byYzXZ"
    >
      Achievements
       | 
      Gym
    </h2>
    <div
      className="sc-htoDjs cWPcJf"
    >
      Creation date:
       
      <span>
        <span>
          Tuesday
        </span>
         - 
        <span>
          01/01/2019
        </span>
         -
         
        <span>
          9:00 PM
        </span>
      </span>
    </div>
    <pre
      className="sc-dnqmqq gMkpRg"
    >
      Offender enjoys attending the gym.
    </pre>
    <div
      className="sc-htpNat dHsapQ"
    >
      <h3
        className="sc-bwzfXH byYzXZ"
      >
        Amendment
      </h3>
      <pre
        className="sc-bxivhb ggFkgd"
      >
        Offender says he doesn't like the gym.
      </pre>
      <div
        className="sc-ifAKCX klzJTC"
      >
        <span>
          Tuesday
        </span>
         - 
        <span>
          01/29/2019
        </span>
         -
         
        <span>
          9:15 PM
        </span>
      </div>
      User, Test
    </div>
  </div>
</div>
`;
